# ChessboardCoverage

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ChessboardCoverage.sln
ChessboardCoverage/: CMakeLists.txt  ChessboardCoverage.vcxproj  ChessboardCoverage.vcxproj.filters
ChessboardCoverage/include/: ChessboardCoverage.h  CoverageOperator.h  DlgSetChessboard.h
ChessboardCoverage/source/include/: ChessboardCoverage.h  CoverageOperator.h  PaintOperator.h
ChessboardCoverage/source/src/: ChessboardCoverage.cpp  ChessboardCoverage.h  ChessboardCoverage.qrc  ChessboardCoverage.ui  CoverageOperator.cpp  DlgSetChessboard.cpp  PaintOperator.cpp
ChessboardCoverage/source/ui/: ChessboardCoverage.ui
ChessboardCoverage/src/: ChessboardCoverage.cpp  CoverageOperator.cpp  DlgSetChessboard.cpp  main.cpp
ChessboardCoverage/ui/: ChessboardCoverage.ui  DlgSetChessboard.ui
ChessboardCoverageCrossPlatform/: CMakeLists.txt  ChessboardCoverageCrossPlatform.cpp  ChessboardCoverageCrossPlatform.h
source/src/: DlgSetChessboard.h  main.cpp
